--- a/style.css
+++ b/style.css
@@ -3,10 +3,24 @@
     margin: 0;
     
   }
-
+  .text
+    {
+        font-size: 4vh;
+        margin-left: 40vh;
+        text-decoration: none;
+        width: 111vh;
+    }
+    #text a{
+      text-decoration: none;
+      color: rgb(52, 23, 149);
+      border: 1px solid rgb(118, 9, 18);
+      border-radius: 2vh;
+      padding: 5px 34px;
+      background-color: rgb(233, 184, 206);
+    }
 body
   {
-    background-image: url(background-image.jpg);
+    background-image: url('img/background.jpg');
    background-size: cover;
    height: 100vh;
     background-position: center;
@@ -14,6 +28,39 @@ body
     box-sizing: border-box;
     font-family:  montserrat;
     align-items: center;
+  }
+
+  #box{
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  #reg{
+    margin-top: 50px;
+  
+    width: 100%;
+    display: block;
+    align-items: center;
+    padding-top: 8px;
+    text-align: center;
+    height: 45px;
+  }
+  #reg a{
+  color: black;
+  text-decoration: none;
+
+  padding: 9px 12px;
+  font-weight: bold;
+   font-size: 28px;
+   width: 25%;
+   font-weight: 500;
+   letter-spacing: 1px;
+   cursor: pointer;
+   margin: 14px 42px;
+   background-color: #47AB11;
+   border: 1px solid black;
+   border-radius: 1vh;
   }
 
   .menu-bar
@@ -92,7 +139,7 @@ body
             padding-top: 6cm;
         }
 
-        #text
+       #text
         {
             font-size: 10vh;
             text-align: center;
@@ -117,12 +164,7 @@ body
 
         }
       
-    .text
-    {
-        font-size: 4vh;
-        margin-left: 40vh;
-        width: 111vh;
-    }
+  
     .moretext
     {
         display: none;
